--- a/posts/templates/homepage.html
+++ b/posts/templates/homepage.html
@@ -35,7 +35,7 @@
           Welcome to <br class="block md:hidden" />
           <span class="relative">
             <span class="h-20 pt-2 overflow-x-hidden whitespace-nowrap text-brand-accent">
-              IT UP <span class="text-3xl md:text-5xl">👨🏻‍💻</span>
+              IT UP <span class="text-3xl md:text-5xl">{% if user.is_authenticated %}{{user.username}}{% else %}anonim{% endif %}</span>
             </span>
             <span
               class="cursor absolute -bottom-0 left-0 -top-1 inline-block bg-white w-full animate-type will-change"
